force-app/main/default/objects/Notion_Sync_Event__e/Notion_Sync_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for triggering Notion synchronization</description>
    <label>Notion Sync Event</label>
    <pluralLabel>Notion Sync Events</pluralLabel>
</CustomObject>