force-app/main/default/objects/Notion_Sync_Event__e/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>Type of operation: CREATE, UPDATE, or DELETE</description>
    <label>Operation Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>